Small fixes before handout

--- a/Games/forza-horizon-4.html
+++ b/Games/forza-horizon-4.html
@@ -90,14 +90,28 @@
             <h4>Prizren 20000</h4>
             <h4>Rruga Tirana, B11</h4>
           </div>
-          <div class="footer-links">
-            <a href="home.html">Home</a>
-            <a href="news.html">News</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="latest.html">Latest</a>
-            <a href="sale.html">Sale</a>
-            <a href="recommended.html">Recommended</a>
+     <div class="footer-links">
+            <div class="footer-link">
+              <a href="home.html">Home</a>
+            </div>
+            <div class="footer-link">
+              <a href="/News/news.html">News</a>
+            </div>
+            <div class="footer-link">
+              <a href="ContactUs/contactUs.html">Contact</a>
+            </div>
+            <div class="footer-link">
+              <a href="About/About.html">About</a>
+            </div>
+            <div class="footer-link">
+              <a href="/Games/game.html">Latest</a>
+            </div>
+            <div class="footer-link">
+              <a href="/Games/game.html">Sale</a>
+            </div>
+            <div class="footer-link">
+              <a href="/Games/game.html">Recommended</a>
+            </div>
           </div>
           <div class="newsletter">
             <form action="" method="post">
