--- a/Games/game.html
+++ b/Games/game.html
@@ -50,22 +50,22 @@
               <a href="home.html">Home</a>
             </div>
             <div class="footer-link">
-              <a href="news.html">News</a>
+              <a href="/News/news.html">News</a>
             </div>
             <div class="footer-link">
-              <a href="contact.html">Contact</a>
+              <a href="ContactUs/contactUs.html">Contact</a>
             </div>
             <div class="footer-link">
-              <a href="about.html">About</a>
+              <a href="About/About.html">About</a>
             </div>
             <div class="footer-link">
-              <a href="latest.html">Latest</a>
+              <a href="/Games/game.html">Latest</a>
             </div>
             <div class="footer-link">
-              <a href="sale.html">Sale</a>
+              <a href="/Games/game.html">Sale</a>
             </div>
             <div class="footer-link">
-              <a href="recommended.html">Recommended</a>
+              <a href="/Games/game.html">Recommended</a>
             </div>
           </div>
           <div class="newsletter">
